--- a/Northwind.Web/Views/Home/Index.cshtml
+++ b/Northwind.Web/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello, @Model</p>
+    <p>Hello Gessss, @Model</p>
 </div>
