--- a/Northwind.Web/Views/ProductsPagedServer/Create.cshtml
+++ b/Northwind.Web/Views/ProductsPagedServer/Create.cshtml
@@ -1,51 +1,102 @@
-﻿@model Northwind.Contracts.Dto.Product.ProductForCreateDto
+﻿@model Northwind.Contracts.Dto.Product.ProductPhotoGroupDto
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Product</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuantityPerUnit" class="control-label"></label>
-                <input asp-for="QuantityPerUnit" class="form-control" />
-                <span asp-validation-for="QuantityPerUnit" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+@using (Html.BeginForm("CreateProductPhoto"
+, "ProductsPagedServer"
+, FormMethod.Post
+, new { @enctype="multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
+    <h4 class="mb-3">Create Product Photos</h4>
+    <hr />
+    @Html.ValidationSummary(true,"",new {@class="text-danger"})
+    <div class="row g-3">
+        <div class="col-md-10">
+            @Html.LabelFor(model => model.productForCreateDto.ProductName, htmlAttributes : new{@class="form-label"})
+            @Html.TextBox("productForCreateDto.ProductName",string.Empty,new{@placeholder="Product Name",@class="form-control"})
+        </div>
     </div>
-</div>
+    <div class="row g-3">
+        <div class="col-md-5">
+            @Html.LabelFor(model => model.productForCreateDto.CategoryId, htmlAttributes : new{@class="form-label"})
+            @Html.DropDownList("productForCreateDto.CategoryId",ViewBag.CategoryId, String.Empty, new {@class="form-control"})
+        </div>
+        <div class="col-md-5">
+            @Html.LabelFor(model => model.productForCreateDto.SupplierId, htmlAttributes : new{@class="form-label"})
+            @Html.DropDownList("productForCreateDto.SupplierId",ViewBag.SupplierId, String.Empty, new {@class="form-control"})
+        </div>
+    </div>
+    <div class="row g-3">
+        <div class="col-md-5">
+            @Html.LabelFor(model => model.productForCreateDto.UnitsInStock, htmlAttributes : new{@class="form-label"})
+            @Html.TextBox("productForCreateDto.UnitsInStock",string.Empty,new{@placeholder="Units In Stock",@class="form-control"})
+        </div>
+        <div class="col-md-5">
+            @Html.LabelFor(model => model.productForCreateDto.UnitPrice, htmlAttributes : new{@class="form-label"})
+            @Html.TextBox("productForCreateDto.UnitPrice",string.Empty,new{@placeholder="Unit Price",@class="form-control"})
+        </div>
+    </div>
+    <div class="row g-3">
+        <div class="col-md-10">
+            @Html.CheckBox("productForCreateDto.Discontinued",false,new{@class="form-check-input"})
+            @Html.LabelFor(model => model.productForCreateDto.Discontinued, htmlAttributes : new{@class="form-label"})
+        </div>
+    </div>
+    <div class="col-9">
+        <div class="row text-center text-lg-start">
+            <div class="col-lg-4 col-md-4 col-6">
+                <img id="preview1" style="width:100px;height:100px">
+                @Html.LabelFor(model => model.Photo1, htmlAttributes : new{@class="form-label"})
+                <br>
+                @Html.TextBoxFor(model => model.AllPhoto,"",
+            new{@type="file",@accept="image/*", @onchange="previewImage(this,'preview1')"})
+            </div>
+            <div class="col-lg-4 col-md-4 col-6">
+                <img id="preview2" style="width:100px;height:100px">
+                @Html.LabelFor(model => model.Photo2, htmlAttributes : new{@class="form-label"})
+                <br>
+                @Html.TextBoxFor(model => model.AllPhoto,"",
+            new{@type="file",@accept="image/*", @onchange="previewImage(this,'preview2')"})
+            </div>
+            <div class="col-lg-4 col-md-4 col-6">
+                <img id="preview3" style="width:100px;height:100px">
+                @Html.LabelFor(model => model.Photo3, htmlAttributes : new{@class="form-label"})
+                <br>
+                @Html.TextBoxFor(model => model.AllPhoto,"",
+            new{@type="file",@accept="image/*", @onchange="previewImage(this,'preview3')"})
+            </div>
+        </div>
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary">Create</button>
+}
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+<script>
+    function previewImage(elemen, value) {
+        //store file image to variable files
+        const files = elemen.files[0];
+
+        //create object FileReader
+        const fileReader = new FileReader();
+
+        //read files from element input type
+        fileReader.readAsDataURL(files);
+
+        //send result base64 image to element html preview1
+        fileReader.onload = function (event) {
+            document.getElementById(value).src = event.target.result;
+        }
+
+
+    }
+</script>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
