--- a/Northwind.Web/Views/Shared/_NorthwindLayout.cshtml
+++ b/Northwind.Web/Views/Shared/_NorthwindLayout.cshtml
@@ -110,7 +110,7 @@
                                 </g>
                             </svg>
                         </span>
-                        <span class="app-brand-text demo menu-text fw-bolder ms-2">Northwind</span>
+                        <span class="app-brand-text demo menu-text fw-bolder ms-2">Diossyaban</span>
                     </a>
 
                     <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -168,8 +168,8 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="auth-register-basic.html" class="menu-link" target="_blank">
-                                    <div data-i18n="Basic">Orders</div>
+                                <a asp-controller="ProductOnSale" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Basic">Products On Sale</div>
                                 </a>
                             </li>
                             <li class="menu-item">
@@ -179,10 +179,12 @@
                             </li>
                         </ul>
                     </li>
-                
-                    
 
-                  
+
+
+
+
+
             </aside>
             <!-- / Menu -->
             <!-- Layout container -->
@@ -225,7 +227,7 @@
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="~/lib/foto/6.jpeg" alt class="w-px-40 h-auto rounded-circle" />
+                                        <img src="~/css/6.jpeg" alt class="w-px-40 h-auto rounded-circle" />
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
@@ -234,11 +236,11 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="~/lib/foto/6.jpeg" alt class="w-px-40 h-auto rounded-circle" />
+                                                        <img src="~/css/6.jpeg" alt class="w-px-40 h-auto rounded-circle" />
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">John Doe</span>
+                                                    <span class="fw-semibold d-block">Diossyaban</span>
                                                     <small class="text-muted">Admin</small>
                                                 </div>
                                             </div>
@@ -308,16 +310,16 @@
                                 <a href="https://instagram.com//diossyaban" target="_blank" class="footer-link fw-bolder">Diossyaban</a>
                             </div>
                             <div>
-                                <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
-                                <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
+                                <a href="https://twitter.com/diossyban17" class="footer-link me-4" target="_blank">Twitter</a>
+                                <a href="https://Github.com/" target="_blank" class="footer-link me-4">Github</a>
 
-                                <a href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                                <a href="https://wa.me/+6281369302158"
                                    target="_blank"
-                                   class="footer-link me-4">Documentation</a>
+                                   class="footer-link me-4">WhatsApp</a>
 
-                                <a href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
+                                <a href="https://www.youtube.com/channel/UCPxI47XtbbzvcX-_qEDd-Xg/videos"
                                    target="_blank"
-                                   class="footer-link me-4">Support</a>
+                                   class="footer-link me-4">YouTube Channel</a>
                             </div>
                         </div>
                     </footer>
