--- a/Northwind.Web/Views/ProductOnSale/Details.cshtml
+++ b/Northwind.Web/Views/ProductOnSale/Details.cshtml
@@ -3,7 +3,35 @@
 
 <div class="col-md-6 col-lg-4">
     <div class="card mb-4">
-        <img class="card-img-top"  src="@Url.Content("~/Resources/images/" + Model.ProductPhotos.FirstOrDefault().PhotoFilename)" alt="Card image cap">
+@*        <img class="card-img-top"  src="@Url.Content("~/Resources/images/" + Model.ProductPhotos.FirstOrDefault().PhotoFilename)" alt="Card image cap">
+*@       
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        @foreach (var item in Model.ProductPhotos)
+                        {
+                            if (Model.ProductPhotos.FirstOrDefault() == item)
+                            {
+                                <div class="carousel-item active">
+                                    <img class="card-img-top"  src="@Url.Content("~/Resources/images/"+item.PhotoFilename)" alt="Card image cap">
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="carousel-item">
+                                    <img class="card-img-top"  src="@Url.Content("~/Resources/images/"+item.PhotoFilename)" alt="Card image cap">
+                                </div>
+                            }
+                        }
+                        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                   </div>
+          </div>
         <div class="card-body">
             <p class="card-text">
                 <center><b>@Html.DisplayFor(model=>model.ProductName)</b></center>
