--- a/Northwind.Web/wwwroot/css/Index.css
+++ b/Northwind.Web/wwwroot/css/Index.css
@@ -32,7 +32,7 @@ div {
 }
 
 :root {
-    --font-family: "Montserrat",sans-serif;
+    --font-family: 'Akura Popo';
     --color-bg: #000;
     --color-footer: #000;
     --color-text: #fff;
